Add IRecipeLayoutBuilder#createFocusLink to make it easier to limit displayed ingredients with input-output relationships based on focus